# autocorrect

./: .gitignore  Cargo.toml  LICENSE  QUICKSTART.md  README.md  build.bat
.github/workflows/: release.yml
src/: config.rs  corrector.rs  dictionary.rs  main.rs  symspell.rs  trigram.rs  updater.rs
